--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
 		<div class="container">
 
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Laxer OS : About Laxer OS">
+			<a class="ui-variable-logo navbar-brand" href="https://www.laxeros.com" title="Laxer OS : About Laxer OS">
 				<!-- Default Logo -->
 				<img class="logo-default" src="assets/img/logo/laxer-logo.png" alt="Laxer OS : About Laxer OS" data-uhd>
 				<!-- Transparent Logo -->
@@ -118,13 +118,13 @@
 				<ul class="nav navbar-nav">
 					<!-- Nav Item -->
 					<li>
-						<a href="https://www.laxeros.com">Home</a>
+						<a href="https://www.laxeros.com/">Home</a>
 					</li>
 				</ul><!--.navbar-nav -->
 			</div><!--.ui-navigation -->
 
 			<!-- Navbar Toggle -->
-			<a href="index.html" class="ui-mobile-nav-toggle pull-right"></a>
+			<a href="https://www.laxeros.com/" class="ui-mobile-nav-toggle pull-right"></a>
 
 			<!-- Navbar Button -->
 			<a href="https://sourceforge.net/projects/laxeros/files/latest/download" class="btn btn-sm ui-gradient-green pull-right">Download <span class="fal fa-cloud-download"></span></a>
@@ -192,7 +192,7 @@
 					<div class="blog-section">
 					<h6 class="section-label">About The Author</h6>
 					<!-- Author Card -->
-					<div class="ui-card ui-gradient-dark shadow-md ui-author-card ui-action-card" data-target="blog.html">
+					<div class="ui-card ui-gradient-dark shadow-md ui-author-card ui-action-card" data-target="blog">
 						<div class="inner">
 							<!-- Left Block -->
 							<div class="block">
@@ -276,13 +276,13 @@
 														<a href="#">Docs</a>
 												</li>
 												<li>
-														<a href="about.html">about</a>
+														<a href="about">about</a>
 												</li>
 												<li>
-														<a href="contact.html">Contact</a>
+														<a href="contact">Contact</a>
 												</li>
 												<li>
-														<a href="donate.html">Donate</a>
+														<a href="donate">Donate</a>
 												</li>
 										</ul>
 								</div>
