--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
 		<div class="container">
 
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Laxer OS : Contact US">
+			<a class="ui-variable-logo navbar-brand" href="https://www.laxeros.com/" title="Laxer OS : Contact US">
 				<!-- Default Logo -->
 				<img class="logo-default" src="assets/img/logo/laxer-logo.png" alt="Laxer OS : Contact US" data-uhd>
 				<!-- Transparent Logo -->
@@ -118,33 +118,13 @@
 				<ul class="nav navbar-nav">
 					<!-- Nav Item -->
 					<li>
-						<a href="about.html">About</a>
-					</li>
-					<!-- Nav Item -->
-					<li>
-						<a href="index.html#" data-scrollto="features">Features</a>
-					</li>
-                    <!-- Nav Item -->
-					<li>
-						<a href="index.html" data-scrollto="Apps">Apps</a>
-					</li>
-                    <!-- Nav Item -->
-					<li>
-						<a href="donate.html">Donate</a>
-					</li>
-					<!-- Nav Item -->
-					<li>
-						<a href="#">source code</a>
-					</li>
-                    <!-- Nav Item -->
-					<li>
-						<a href="index.html">Docs</a>
+						<a href="https://www.laxeros.com/">Home</a>
 					</li>
 				</ul><!--.navbar-nav -->
 			</div><!--.ui-navigation -->
 
 			<!-- Navbar Toggle -->
-			<a href="index.html" class="ui-mobile-nav-toggle pull-right"></a>
+			<a href="#" class="ui-mobile-nav-toggle pull-right"></a>
 
 			<!-- Navbar Button -->
 			<a href="https://sourceforge.net/projects/laxeros/files/latest/download" class="btn btn-sm ui-gradient-green pull-right">Download <span class="fal fa-cloud-download"></span></a>
@@ -277,13 +257,13 @@
 														<a href="#">Docs</a>
 												</li>
 												<li>
-														<a href="about.html">about</a>
+														<a href="about">about</a>
 												</li>
 												<li>
-														<a href="contact.html">Contact</a>
+														<a href="contact">Contact</a>
 												</li>
 												<li>
-														<a href="pages/donate.html">Donate</a>
+														<a href="pages/donate">Donate</a>
 												</li>
 										</ul>
 								</div>
