--- a/donate.html
+++ b/donate.html
@@ -106,7 +106,7 @@
 		<div class="container">
 
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Laxer OS : Donate">
+			<a class="ui-variable-logo navbar-brand" href="index" title="Laxer OS : Donate">
 				<!-- Default Logo -->
 				<img class="logo-default" src="assets/img/logo/laxer-logo.png" alt="Laxer OS : Donate" data-uhd>
 				<!-- Transparent Logo -->
@@ -118,33 +118,13 @@
 				<ul class="nav navbar-nav">
 					<!-- Nav Item -->
 					<li>
-						<a href="about.html">About</a>
-					</li>
-					<!-- Nav Item -->
-					<li>
-						<a href="index.html#" data-scrollto="features">Features</a>
-					</li>
-                    <!-- Nav Item -->
-					<li>
-						<a href="index.html" data-scrollto="Apps">Apps</a>
-					</li>
-                    <!-- Nav Item -->
-					<li>
-						<a href="donate.html">Donate</a>
-					</li>
-					<!-- Nav Item -->
-					<li>
-						<a href="#">source code</a>
-					</li>
-                    <!-- Nav Item -->
-					<li>
-						<a href="index.html">Docs</a>
+						<a href="https://www.laxeros.com/">Home</a>
 					</li>
 				</ul><!--.navbar-nav -->
 			</div><!--.ui-navigation -->
 
 			<!-- Navbar Toggle -->
-			<a href="index.html" class="ui-mobile-nav-toggle pull-right"></a>
+			<a href="index" class="ui-mobile-nav-toggle pull-right"></a>
 
 			<!-- Navbar Button -->
 			<a href="https://sourceforge.net/projects/laxeros/files/latest/download" class="btn btn-sm ui-gradient-green pull-right">Download <span class="fal fa-cloud-download"></span></a>
@@ -244,7 +224,7 @@ Manzoor Ahmed&nbsp; on manzoorahmedmunawar@gmail.com
 					<div class="blog-section">
 					<h6 class="section-label">About The Author</h6>
 					<!-- Author Card -->
-					<div class="ui-card ui-gradient-green shadow-md ui-author-card ui-action-card" data-target="blog.html">
+					<div class="ui-card ui-gradient-green shadow-md ui-author-card ui-action-card" data-target="blog">
 						<div class="inner">
 							<!-- Left Block -->
 							<div class="block">
@@ -328,13 +308,13 @@ Manzoor Ahmed&nbsp; on manzoorahmedmunawar@gmail.com
 														<a href="#">Docs</a>
 												</li>
 												<li>
-														<a href="about.html">about</a>
+														<a href="about">about</a>
 												</li>
 												<li>
-														<a href="contact.html">Contact</a>
+														<a href="contact">Contact</a>
 												</li>
 												<li>
-														<a href="pages/donate.html">Donate</a>
+														<a href="pages/donate">Donate</a>
 												</li>
 										</ul>
 								</div>
