--- a/donate.html
+++ b/donate.html
@@ -203,7 +203,7 @@ Laxer OS is a Linux distribution aiming to provide a stable, reliable, and secur
 <br>
 <a href="https://www.patreon.com/bePatron?u=31831015" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
 <br>
-<h3>For wire transfer contact>/h3>
+<h3>For wire transfer contact</h3>
 <br>
 Manzoor Ahmed&nbsp; on manzoorahmedmunawar@gmail.com
 <br>
