--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div class="container">
 
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="www.laxeros.com" title="Laxer OS : Arch based Linux distribution">
+			<a class="ui-variable-logo navbar-brand" href="/" title="Laxer OS : Arch based Linux distribution">
 				<!-- Default Logo -->
 				<img class="logo-default" src="assets/img/logo/laxer-logo.png" alt="Laxer OS : Arch based Linux distribution" data-uhd>
 				<!-- Transparent Logo -->
