added social links

--- a/about.html
+++ b/about.html
@@ -290,17 +290,17 @@
 										<h6 class="heading footer-heading">Fowllow</h6>
 										<div>
 												<a class="btn ui-gradient-blue btn-circle shadow-md">
-						<span class="fab fa-facebook"></span>
-					</a>
-					<a class="btn ui-gradient-peach btn-circle shadow-md">
-						<span class="fab fa-reddit"></span>
-					</a>
-					<a class="btn ui-gradient-green btn-circle shadow-md">
-						<span class="fab fa-twitter"></span>
-					</a>
-					<a class="btn ui-gradient-purple btn-circle shadow-md">
-						<span class="fab fa-github"></span>
-					</a>
+													<span class="fab fa-facebook"></span>
+												</a>
+												<a href="https://www.reddit.com/r/laxeros/" class="btn ui-gradient-peach btn-circle shadow-md">
+													<span class="fab fa-reddit"></span>
+												</a>
+												<a href="https://twitter.com/laxer_os" class="btn ui-gradient-green btn-circle shadow-md">
+													<span class="fab fa-twitter"></span>
+												</a>
+												<a href="https://github.com/Laxer-os" class="btn ui-gradient-purple btn-circle shadow-md">
+													<span class="fab fa-github"></span>
+												</a>
 										</div>
 								</div>
 						</div><!-- .row -->
