--- a/donate.html
+++ b/donate.html
@@ -297,7 +297,7 @@ Manzoor Ahmed&nbsp; on manzoorahmedmunawar@gmail.com
 														<a href="https://sourceforge.net/projects/laxeros/files/latest/download">Direct Download</a>
 												</li>
 												<li>
-														<a href="#">Apps</a>
+														<a href="https://www.laxeros.com/packages">Apps</a>
 												</li>
 										</ul>
 								</div>
