--- a/about.html
+++ b/about.html
@@ -265,7 +265,7 @@
 														<a href="https://sourceforge.net/projects/laxeros/files/latest/download">Direct Download</a>
 												</li>
 												<li>
-														<a href="#">Apps</a>
+														<a href="https://www.laxeros.com/packages">Apps</a>
 												</li>
 										</ul>
 								</div>
