--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					</li>
                     <!-- Nav Item -->
 					<li>
-						<a href="/#" data-scrollto="Apps">Apps</a>
+						<a href="packages">Apps</a>
 					</li>
                     <!-- Nav Item -->
 					<li>
@@ -493,7 +493,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                                 <a href="https://sourceforge.net/projects/laxeros/files/latest/download">Direct Download</a>
                             </li>
                             <li>
-                                <a href="#">Apps</a>
+                                <a href="packages">Apps</a>
                             </li>
                         </ul>
                     </div>
