improvements for mobile

--- a/packages.html
+++ b/packages.html
@@ -132,73 +132,77 @@
 		</div><!-- .container -->
 	</nav> <!-- nav -->
 	<!-- Hero -->
-<div class="ui-hero hero-sm ui-post-hero ui-gradient-dark">
+<div class="ui-hero hero-sm ui-post-hero ui-gradient-peach">
 	<div class="container">
 	</div>
 </div>
+
 	<!-- Main Wrapper -->
+	<div class="main" role="main">
 	<div class="section">
 			<div class="container">
 					<div class="ui-pricing-extras  center-on-sm">
 							<div class="icon">
-									<i class="fas fa-box-full fa-5x"></i>
+								<span class="fas fa-box-full fa-5x"></span>
+						</div>
+							<div class="text">
+								<h5 class="heading">Packages from laxer repo</h5>
+										<div class="col-sm-4">
+											<p class="pb-2">Packages already available on latest build</p>
+												<ul class="ui-checklist text-green">
+														<li>Calamares-3.2.29</li>
+														<li>Calamares-configs-1.1</li>
+												</ul>
+												<ul class="ui-checklist text-green">
+														<li>Pamac-9.5.8</li>
+														<li>Yay-10.0.4</li>
+												</ul>
+										</div>
+										<div class="col-sm-4">
+											<p class="pb-2">Packages planned for next version of laxer OS</p>
+												<ul class="ui-checklist text-orange">
+														<li>Laxer-wallpapers-1.0</li>
+														<li>Laxer-fonts-1.0</li>
+													</ul>
+													<ul class="ui-checklist text-orange">
+														<li>Oh-my-zsh</li>
+														<li>Pamac-zsh-completions-0.6</li>
+													</ul>
+													<ul class="ui-checklist text-orange">
+														<li>Zakoota-icons-1.2</li>
+												</ul>
+										</div>
+										<div class="col-sm-4">
+											<p class="pb-2">Arch / AUR</p>
+												<ul class="ui-checklist text-blue">
+														<li>All arch packages</li>
+														<li>All AUR packages</li>
+												</ul>
+										</div>
+					</div>
+			</div>
+			<div class="container">
+					<div class="ui-pricing-extras  center-on-sm">
+							<div class="icon">
+									<span class="fad fa-calendar-edit fa-5x"></span>
 							</div>
 							<div class="text">
-									<h5 class="heading">Packages from laxer repo</h5>
-									<div class="row">
+									<h5 class="heading">Outdated packages from Laxer repo</h5>
 											<div class="col-sm-4">
-												<p class="pb-2">Packages already available on latest build</p>
-													<ul class="ui-checklist text-green">
-															<li>Calamares 3.2.29</li>
-															<li>Calamares configs 1.1</li>
-															<li>Pamac 9.5.8</li>
-															<li>Yay 10.0.4</li>
+												<p class="pb-2">List of Outdated packages</p>
+													<ul class="ui-checklist text-red">
+															<li>Calamares-3.2.30</li>
+															<li>Pamac-9.5.9</li>
+													</ul>
+													<ul class="ui-checklist text-red">
 													</ul>
 											</div>
-											<div class="col-sm-4">
-												<p class="pb-2">Packages planned for next version of laxer OS</p>
-													<ul class="ui-checklist text-orange">
-															<li>Laxer-wallpapers 1.0</li>
-															<li>Laxer-fonts 1.0</li>
-															<li>Oh-my-zsh</li>
-															<li>Pamac-zsh-completions 0.6</li>
-															<li>Zakoota-icons 1.2</li>
-													</ul>
-											</div>
-											<div class="col-sm-4">
-												<p class="pb-2">Arch / AUR</p>
-													<ul class="ui-checklist text-blue">
-															<li>All arch packages</li>
-															<li>All AUR packages</li>
-													</ul>
-											</div>
-									</div>
 							</div>
 					</div>
 			</div>
 	</div>
-	<div class="container">
-			<div class="ui-pricing-extras  center-on-sm">
-					<div class="icon">
-							<i class="fad fa-calendar-edit fa-5x"></i>
-					</div>
-					<div class="text">
-							<h5 class="heading">Outdated packages</h5>
-							<div class="row">
-									<div class="col-sm-4">
-										<p class="pb-2">List of Outdated packages</p>
-											<ul class="ui-checklist text-red">
-													<li>Calamares 3.2.30</li>
-													<li>Pamac 9.5.9</li>
-											</ul>
-									</div>
-							</div>
-					</div>
-			</div>
 	</div>
-</div>
-
-    </div><!-- .main -->
+<!-- .main -->
 
 <!-- Scripts -->
 <script type="text/javascript" src="assets/js/libs/jquery/jquery-3.2.1.min.js"></script>
@@ -210,7 +214,6 @@
 # Google Maps
 # Add Your Google Maps API Key Below !!
 -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5B2iXEELo6aIReGYLJdVKBlzHnrM0YLU"></script>
 <script type="text/javascript" src="assets/js/laxer/ui-map.js"></script>
 <script type="text/javascript" src="assets/js/libs/form-validator/form-validator.min.js"></script>
 <script type="text/javascript" src="assets/js/libs/bootstrap.js"></script>
