Minor typos and grammatical corrections

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					</li>
 					<!-- Nav Item -->
 					<li>
-						<a href="#">source code</a>
+						<a href="#">Source Code</a>
 					</li>
                     <!-- Nav Item -->
 					<li>
@@ -163,7 +163,7 @@
 						<h1 class="heading animate" data-show="fade-in-up-big" data-delay="100">
                             Arch based Linux distribution
 						</h1>
-                        <p class="paragraph">Beutifully crafted GNU/LINUX distro for everyone.</p>
+                        <p class="paragraph">Beautifully crafted GNU/LINUX distro for everyone.</p>
 						<div class="actions animate" data-show="fade-in-up-big" data-delay="600">
 							<a href="https://sourceforge.net/projects/laxeros/files/latest/download" class="btn ui-gradient-peach shadow-xl">Download <i class="fas fa-save"></i></span></a>
 							<a href="https://raw.githubusercontent.com/Laxer-os/laxer-website/master/assets/torrents/laxeros-1.1-x86_64.iso.torrent" class="btn ui-gradient-green shadow-xl">Grab Torrent <i class="far fa-cloud-download"></i></a>
@@ -187,7 +187,7 @@
 																				About
 					                            </h2>
 					                            <p class="paragraph">
-Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use, it is available for any 64-bit computer, laptop, or tablet with highly focused on security, reliability, and performance, Laxer OS is a versatile, and simple Linux distribution designed to fit the needs of the competent and common Linux users. It is powerful, easy to manage and install which makes it an ideal distribution for computer laptops workstations and tablets.					                            </p>
+Laxer OS is an Arch-based Linux distribution for work and everyday use. It is available for any 64-bit computer, laptop, or tablet, and highly focused on security, reliability, and performance. Laxer OS is a simplistic, versatile Linux distribution, designed to fit the needs of competent and common Linux users. It is powerful, easy to manage, and easy to install.</p>
 					                            <div class="actions">
 					                                <a href="about" class="btn ui-gradient-peach shadow-xl">learn more</a>
 					                            </div>
@@ -206,42 +206,42 @@ Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use,
    				<div class="row">
    					<div class="col-sm-4 col-6 ui-icon-block">
    						<div class="icon icon-lg icon-circle ui-gradient-blue"><i class="fas fa-palette"></i></div>
-   						<h4>Beutifully crafted</h4>
+   						<h4>Beautifully Crafted</h4>
 						<p>
-Laxer OS is a beautifully crafted GNU/Linux operating system and give you a unique theme and icons which are minimalist, appealing to eyes and never makes your experience boring.						</p>
+Laxer OS is a beautifully crafted GNU/Linux operating system, with a unique theme, and minimalist icons. Laxer OS is appealing to the eyes and never allows a boring experience.						</p>
    					</div>
    					<div class="col-sm-4 col-6 ui-icon-block">
    						<div class="icon icon-lg icon-circle ui-gradient-peach"><i class="fab fa-linux"></i></div>
    						<h4>Based on Arch Linux</h4>
    						<p>
-								Laxer OS is based on Arch Linux and provides you rolling release model and all benefits of thousands of cutting-edge/bleeding-edge software.
+								Laxer OS is based on Arch Linux, provides you rolling release model, and all benefits of thousands of cutting-edge/bleeding-edge software.
 						</p>
    					</div>
    					<div class="col-sm-4 col-6 col-sm-offset-0 col-offset-3 ui-icon-block">
    						<div class="icon icon-lg icon-circle ui-gradient-green"><i class="fas fa-shield-virus"></i></div>
-   						<h4>Safe from viruses</h4>
+   						<h4>Safe from Viruses</h4>
 						<p>
-Laxer OS is secure from viruses, malware, and other spywares, our code is open for everyone means users can identify malicious feature or code which makes Laxer OS more secure.						</p>
+Laxer OS is secure from viruses, malware, and other spyware. Our code is open for everyone, so users can identify a malicious feature or code, making Laxer OS more secure.						</p>
    					</div>
 						<div class="col-sm-4 col-6 ui-icon-block">
 							<div class="icon icon-lg icon-circle ui-gradient-purple"><i class="far fa-ghost"></i></div>
-							<h4>Ships with Pamac</h4>
+							<h4>Ships with Pacman</h4>
 						<p>
-							Ships with graphical front end for pacman with support of AUR which makes installing softwares easy with few clicks.
+							Ships with a graphical frontend for Pacman, with support of AUR, which makes installing softwares easy with few clicks.
 						</p>
 						</div>
 						<div class="col-sm-4 col-6 ui-icon-block">
 							<div class="icon icon-lg icon-circle ui-gradient-peach"><i class="fas fa-window-alt"></i></div>
 							<h4>Ships with Gnome</h4>
 							<p>
-Laxer OS ships with a Gnome desktop which is stable, easy to use, very customizable and elegant way to use your computer or touch tablets.
+Laxer OS ships with a Gnome desktop. Gnome is stable, easy to use, very customizable and an elegant way to use your computer or touch tablets.
 						</p>
 						</div>
 						<div class="col-sm-4 col-6 col-sm-offset-0 col-offset-3 ui-icon-block">
 							<div class="icon icon-lg icon-circle ui-gradient-dark"><i class="fas fa-tablet"></i></div>
 							<h4>Multiple Devices</h4>
 						<p>
-							Laxer OS is available for multipe devices we designed to be used on any X86_64 computer, laptop and touch tablets.
+							Laxer OS is available for multipe devices: designed to be used on any X86_64 computer, laptop or touch tablet.
 						</p>
 						</div>
    				</div><!-- .row -->
@@ -254,7 +254,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
    				<!-- Section Heading -->
    				<div class="section-heading center">
    					<h2 class="heading text-indigo">
-   						Ships with two variants of theme
+   						Multiple Theme Variants
    					</h2>
    				</div><!-- .section-heading -->
 
@@ -265,7 +265,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                                 Light
                             </h4>
                             <p class="paragraph">
-															An enjoyable flat and light theme with a unique and modern looks for Gnome.
+															An enjoyable, flat and light theme, with a unique and modern look for Gnome.
 																</p>
                             <a href="index#" class="btn-link btn-arrow">Explore</a>
                         </div>
@@ -279,7 +279,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                                 Dark
                             </h4>
                             <p class="paragraph">
-															A dark variant of theme inspired from dracula colours with a unique and modern look.
+															A dark variant of the theme, inspired from dracula colours, with a unique and modern look.
                             </p>
                             <a href="index#" class="btn-link btn-arrow">Explore</a>
                         </div>
@@ -306,7 +306,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                                 1000's of Apps
                             </h2>
                             <p class="paragraph">
-                                We ship all essentials apps for day to day use and give you access to Arch Linux packages and AUR with a powerful software manager Pamac.
+                                We ship all essential apps, for day to day use, plus you have access to Arch Linux packages and AUR, with a powerful software manager: Pacman.
                             </p>
                         </div><!-- .section-heading -->
 
@@ -316,35 +316,35 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
    								<i class="fal fa-cogs fa-2x"></i>
 									<br>
    								<p class="">
-   									Productivity apps
+   									Productivity Apps
    								</p>
    							</li>
 								<li class="ui-icon-block">
    								<i class="far fa-file-code fa-2x"></i>
 									<br>
    								<p class="">
-   									Development apps
+   									Development Apps
    								</p>
    							</li>
 								<li class="ui-icon-block">
 									<i class="far fa-pencil-paintbrush fa-2x"></i>
 									<br>
 									<p class="">
-										Graphics apps
+										Graphics Apps
 									</p>
 								</li>
 								<li class="ui-icon-block">
 									<i class="fal fa-briefcase fa-2x"></i>
 									<br>
 									<p class="">
-										Office apps
+										Office Apps
 									</p>
 								</li>
 								<li class="ui-icon-block">
 									<i class="fal fa-vhs fa-2x"></i>
 									<br>
 									<p class="">
-										Video editing apps
+										Video Editing Apps
 									</p>
 								</li>
    						</ul>
@@ -435,10 +435,10 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
    						<!-- Section Heading -->
    						<div class="section-heading mb-0 center-on-md">
 							<h2 class="heading">
-								Why only Gnome
+								Why only Gnome?
 							</h2>
 							<p class="paragraph">
-								Gnome is a versatile desktop envoirment and works better then other Graphical user interface in linux for touch tablets. we wanted to bring support for both X86_64 touch tablets and computers, furthermore work flow of gnome is also designed to be used with mouse and key board.
+								Gnome is a versatile desktop environment and works better on touch tablets than other graphical user interfaces. We want to bring support for both X86_64 touch tablets and computers. Furthermore, the workflow of Gnome is designed for optimal support with mouse and keyboard.
 							</p>
 						</div><!-- .section-heading -->
    					</div>
@@ -480,14 +480,14 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
   			        <div class="col-md-4 col-sm-6 footer-about footer-col center-on-sm">
                         <img src="assets/img/logo/laxer-logo-white.png" data-uhd alt="Applif - App Landing HTML Template"/>
                         <p class="mt-1">
-                            Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance.
+                            Laxer OS is an Arch-based Linux distribution for work and everyday use, and is highly focused on security, reliability, and performance.
                         </p>
                     </div>
                     <div class="col-md-2 col-6 footer-col">
-                        <h6 class="heading footer-heading">Other links</h6>
+                        <h6 class="heading footer-heading">Other Links</h6>
                         <ul class="footer-nav">
                             <li>
-                                <a href="https://raw.githubusercontent.com/Laxer-os/laxer-website/master/assets/torrents/laxeros-1.1-x86_64.iso.torrent">Download torrent</a>
+                                <a href="https://raw.githubusercontent.com/Laxer-os/laxer-website/master/assets/torrents/laxeros-1.1-x86_64.iso.torrent">Download Torrent</a>
                             </li>
                             <li>
                                 <a href="https://sourceforge.net/projects/laxeros/files/latest/download">Direct Download</a>
@@ -504,7 +504,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                                 <a href="#">Docs</a>
                             </li>
                             <li>
-                                <a href="about">about</a>
+                                <a href="about">About</a>
                             </li>
                             <li>
                                 <a href="contact">Contact</a>
@@ -515,7 +515,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                         </ul>
                     </div>
                     <div class="col-md-4 col-sm-6 footer-col center-on-sm">
-                        <h6 class="heading footer-heading">Fowllow</h6>
+                        <h6 class="heading footer-heading">Follow</h6>
                         <div>
                             <a href="https://www.facebook.com/laxerlinux" class="btn ui-gradient-blue btn-circle shadow-md">
 															<span class="fab fa-facebook"></span>
@@ -541,7 +541,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
 						<!-- Copyright -->
 						<div class="col-sm-6 center-on-sm">
 							<p>
-								copyright &copy; 2020 <a href="http://www.laxeros.com" target="_blank" title="Laxer OS">Laxer OS</a>
+								Copyright &copy; 2020 <a href="http://www.laxeros.com" target="_blank" title="Laxer OS">Laxer OS</a>
 							</p>
 						</div>
 					</div>
