--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
 
 <!-- Primary Meta Tags -->
-<title>Laxer OS : Arch based Linux distribution</title>
+<title>Laxer OS : Arch-based Linux distribution</title>
 <meta name="title" content="Laxer OS : Arch based Linux distribution">
 <meta name="description" content="Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance. ">
 
@@ -106,11 +106,11 @@
 		<div class="container">
 
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="/" title="Laxer OS : Arch based Linux distribution">
+			<a class="ui-variable-logo navbar-brand" href="/" title="Laxer OS : Arch-based Linux distribution">
 				<!-- Default Logo -->
-				<img class="logo-default" src="assets/img/logo/laxer-logo.png" alt="Laxer OS : Arch based Linux distribution" data-uhd>
+				<img class="logo-default" src="assets/img/logo/laxer-logo.png" alt="Laxer OS : Arch-based Linux distribution" data-uhd>
 				<!-- Transparent Logo -->
-				<img class="logo-transparent" src="assets/img/logo/laxer-logo-white.png" alt="Laxer OS : Arch based Linux distribution" data-uhd>
+				<img class="logo-transparent" src="assets/img/logo/laxer-logo-white.png" alt="Laxer OS : Arch-based Linux distribution" data-uhd>
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
@@ -161,7 +161,7 @@
 				<div class="row">
 					<div class="col-sm-12" data-vertical_center="true" data-vertical_offset="16">
 						<h1 class="heading animate" data-show="fade-in-up-big" data-delay="100">
-                            Arch based Linux distribution
+                            Arch-based Linux distribution
 						</h1>
                         <p class="paragraph">Beautifully crafted GNU/LINUX distro for everyone.</p>
 						<div class="actions animate" data-show="fade-in-up-big" data-delay="600">
@@ -214,7 +214,7 @@ Laxer OS is a beautifully crafted GNU/Linux operating system, with a unique them
    						<div class="icon icon-lg icon-circle ui-gradient-peach"><i class="fab fa-linux"></i></div>
    						<h4>Based on Arch Linux</h4>
    						<p>
-								Laxer OS is based on Arch Linux, provides you rolling release model, and all benefits of thousands of cutting-edge/bleeding-edge software.
+								Laxer OS is based on Arch Linux, provides a rolling release model, and thousands of cutting-edge/bleeding-edge software.
 						</p>
    					</div>
    					<div class="col-sm-4 col-6 col-sm-offset-0 col-offset-3 ui-icon-block">
