Minor text corrections on the homepage

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
 
 <!-- Primary Meta Tags -->
-<title>Laxer OS : Arch-based Linux distribution</title>
+<title>Laxer OS : Arch-based Linux Distribution</title>
 <meta name="title" content="Laxer OS : Arch based Linux distribution">
 <meta name="description" content="Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance. ">
 
@@ -161,7 +161,7 @@
 				<div class="row">
 					<div class="col-sm-12" data-vertical_center="true" data-vertical_offset="16">
 						<h1 class="heading animate" data-show="fade-in-up-big" data-delay="100">
-                            Arch-based Linux distribution
+                            Arch-based Linux Distribution
 						</h1>
                         <p class="paragraph">Beautifully crafted GNU/LINUX distro for everyone.</p>
 						<div class="actions animate" data-show="fade-in-up-big" data-delay="600">
