--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
 
 <!-- Primary Meta Tags -->
 <title>Laxer OS : Arch-based Linux Distribution</title>
-<meta name="title" content="Laxer OS : Arch based Linux distribution">
+<meta name="title" content="Laxer OS : Arch-based Linux Distribution">
 <meta name="description" content="Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance. ">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://laxeros.com">
-<meta property="og:title" content="Laxer OS : Arch based Linux distribution">
+<meta property="og:title" content="Laxer OS : Arch-based Linux Distribution">
 <meta property="og:description" content="Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance. ">
 <meta property="og:image" content="assets/img/laxer-demo/laxer0.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://laxeros.com">
-<meta property="twitter:title" content="Laxer OS : Arch based Linux distribution">
+<meta property="twitter:title" content="Laxer OS : Arch-based Linux Distribution">
 <meta property="twitter:description" content="Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance. ">
 <meta property="twitter:image" content="assets/img/laxer-demo/laxer0.png">
 
@@ -106,11 +106,11 @@
 		<div class="container">
 
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="/" title="Laxer OS : Arch-based Linux distribution">
+			<a class="ui-variable-logo navbar-brand" href="/" title="Laxer OS : Arch-based Linux Distribution">
 				<!-- Default Logo -->
-				<img class="logo-default" src="assets/img/logo/laxer-logo.png" alt="Laxer OS : Arch-based Linux distribution" data-uhd>
+				<img class="logo-default" src="assets/img/logo/laxer-logo.png" alt="Laxer OS : Arch-based Linux Distribution" data-uhd>
 				<!-- Transparent Logo -->
-				<img class="logo-transparent" src="assets/img/logo/laxer-logo-white.png" alt="Laxer OS : Arch-based Linux distribution" data-uhd>
+				<img class="logo-transparent" src="assets/img/logo/laxer-logo-white.png" alt="Laxer OS : Arch-based Linux Distribution" data-uhd>
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
@@ -170,7 +170,7 @@
 						</div>
 					</div>
 					<div class="col-sm-12 animate" data-show="fade-in-up" data-delay="400">
-						<img src="assets/img/laxer-demo/laxer0.png" alt="Laxer OS : Arch based Linux distribution" data-uhd data-max_width="1000" class="responsive-on-lg" />
+						<img src="assets/img/laxer-demo/laxer0.png" alt="Laxer OS : Arch-based Linux Distribution" data-uhd data-max_width="1000" class="responsive-on-lg" />
 					</div>
 				</div><!-- .row -->
 			</div><!-- .container -->
@@ -194,7 +194,7 @@ Laxer OS is an Arch-based Linux distribution for work and everyday use. It is av
 					                        </div><!-- .section-heading -->
 					                    </div>
 					                    <div class="col-lg-6">
-					                        <img src="assets/img/laxer-demo/laxer1.png" data-uhd data-max_width="1065" class="responsive-on-md shadow-xl" alt="Laxer OS : Arch based Linux distribution" />
+					                        <img src="assets/img/laxer-demo/laxer1.png" data-uhd data-max_width="1065" class="responsive-on-md shadow-xl" alt="Laxer OS : Arch-based Linux Distribution" />
 					                    </div>
 					                </div>
 					   			</div><!-- .container -->
@@ -270,7 +270,7 @@ Laxer OS ships with a Gnome desktop. Gnome is stable, easy to use, very customiz
                             <a href="index#" class="btn-link btn-arrow">Explore</a>
                         </div>
                         <div class="col-md-6">
-                            <img class="responsive-on-xs" src="assets/img/laxer-demo/laxer2.png" dat-uhd alt="Laxer OS : Arch based Linux distribution" data-max_width="464" />
+                            <img class="responsive-on-xs" src="assets/img/laxer-demo/laxer2.png" dat-uhd alt="Laxer OS : Arch-based Linux Distribution" data-max_width="464" />
                         </div>
                     </div>
                     <div class="row">
@@ -284,7 +284,7 @@ Laxer OS ships with a Gnome desktop. Gnome is stable, easy to use, very customiz
                             <a href="index#" class="btn-link btn-arrow">Explore</a>
                         </div>
                         <div class="col-md-6">
-                            <img class="responsive-on-xs" src="assets/img/laxer-demo/laxer3.png" dat-uhd alt="Laxer OS : Arch based Linux distribution"  data-max_width="451"/>
+                            <img class="responsive-on-xs" src="assets/img/laxer-demo/laxer3.png" dat-uhd alt="Laxer OS : Arch-based Linux Distribution"  data-max_width="451"/>
                         </div>
                     </div>
                 </div>
@@ -444,7 +444,7 @@ Laxer OS ships with a Gnome desktop. Gnome is stable, easy to use, very customiz
    					</div>
    					<!-- Image Column -->
    					<div class="col-lg-6 col-md-7 img-block animate" data-show="fade-in-left"  data-vertical_center="true">
-   						<img src="assets/img/support/laxer-support.png" alt="Laxer OS : Arch based Linux distribution" data-uhd class="img-fluid" data-max_width="460" />
+   						<img src="assets/img/support/laxer-support.png" alt="Laxer OS : Arch-based Linux Distribution" data-uhd class="img-fluid" data-max_width="460" />
    					</div>
    				</div><!-- .row -->
    			</div><!-- .container -->
@@ -455,19 +455,19 @@ Laxer OS ships with a Gnome desktop. Gnome is stable, easy to use, very customiz
    			<div class="container">
    				<div class="d-flex justify-content-between">
    					<div>
-   						<img src="assets/img/logos/laxer.png" alt="Laxer OS : Arch based Linux distribution" data-uhd />
+   						<img src="assets/img/logos/laxer.png" alt="Laxer OS : Arch-based Linux Distribution" data-uhd />
    					</div>
    					<div>
-   						<img src="assets/img/logos/gnome.png" alt="Laxer OS : Arch based Linux distribution" data-uhd />
+   						<img src="assets/img/logos/gnome.png" alt="Laxer OS : Arch-based Linux Distribution" data-uhd />
    					</div>
    					<div>
-   						<img src="assets/img/logos/gnu.png" alt="Laxer OS : Arch based Linux distribution" data-uhd />
+   						<img src="assets/img/logos/gnu.png" alt="Laxer OS : Arch-based Linux Distribution" data-uhd />
    					</div>
    					<div>
-   						<img src="assets/img/logos/arch.png" alt="Laxer OS : Arch based Linux distribution" data-uhd />
+   						<img src="assets/img/logos/arch.png" alt="Laxer OS : Arch-based Linux Distribution" data-uhd />
    					</div>
    					<div>
-   						<img src="assets/img/logos/linux.png" alt="Laxer OS : Arch based Linux distribution" data-uhd />
+   						<img src="assets/img/logos/linux.png" alt="Laxer OS : Arch-based Linux Distribution" data-uhd />
    					</div>
    				</div><!-- .row -->
    			</div><!-- .container -->
